Move Save button

--- a/templates/bounties/add.html
+++ b/templates/bounties/add.html
@@ -98,12 +98,13 @@
 	    cols="50"></textarea>
 	<br>
 	<button
-			class="btn btn-success"
+			class="btn btn-success pull-right"
       data-loading-text="{% trans 'Loading...' %}"
 	    id="save"
 	    style="display:none">
     {% trans "Save" %}
 	</button>
+  <div class="clearfix"></div>
 </form>	
 <!-- End block -->
 
