--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -98,7 +98,7 @@
             rows="4"
             cols="50"></textarea>
         <br>
-        <div id="g-captcha" class="pull-left g-recaptcha" data-sitekey="6LeMMgQTAAAAAI_ZCxiJJcZOf0RTC-SYBrge8gRD"></div>
+        <div id="g-captcha" class="pull-left g-recaptcha" data-sitekey="{{ RECAPTCHA_KEY }}"></div>
         <button class="btn btn-success pull-right" data-loading-text="{% trans 'Loading...' %}" id="comment-save">
           {% trans "Publish" %}
         </button>
