Update getURLparameter in JS

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,8 +58,9 @@
       var sURLVariables = sPageURL.split('&');
       for (var i = 0; i < sURLVariables.length; i++) {
         var sParameterName = sURLVariables[i].split('=');
-        if (sParameterName[0] == sParam)
-          return sParameterName[1];
+        if (sParameterName[0] == sParam) {
+          return sParameterName[1] || true;
+        }
       }
     };
     function getCookie(name) {
