update template and css for export

--- a/templates/bounties/export.html
+++ b/templates/bounties/export.html
@@ -1,1 +1,5 @@
-<div>jambon {{ bounty }}</div>
+<body>
+	<img src="{{ bounty.source_thumbnail }}">
+	wants to kill
+	<img src="{{ bounty.destination_thumbnail }}">
+</body>
